# souslesensVocables

./: .claude_chat_events.jsonl  .claude_events.jsonl  .claudeignore  .dockerignore  .env.local  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CSV__authors_csv.csv  CSV__books_csv.csv  Dockerfile  LICENSE  README.md  WORKTREE.md  app.js  cypress.config.ts  cypress.json  default.env  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  env.template  eslint.config.mjs  events.csv  fix-imports.js  jest.config.js  jsdoc.json  legacy_routes.js  licence.txt  mapping_ISO-14224-IOF-RDL.rml.ttl  mapping_movie.rml.ttl  mapping_rmleditor.rml.ttl  mapping_testChakib2.rml.ttl  (+19 more)
docs/: Makefile  README.md  _config.yml  conf.py  config.md  dataSourcesManager.js.html  home-page.md  index.html  index.md  mappingColumnsGraph.js.html  mappingModeler.js.html  mappingTransform.js.html  mappingsDetails.js.html  module-DataSourceManager.html  module-MappingColumnsGraph.html  module-MappingModeler.html  module-MappingTransform.html  module-MappingsDetails.html  module-MappingsDetails.transform.html  module-TripleFactory.html  module-UIcontroller.html  pyproject.toml  tripleFactory.js.html  tutorial-overview.html  uiController.js.html
docs/.slsScriptsactivate.bat/: pyvenv.cfg
docs/docs/: conf.py  index.md
docs/jsdoc/: jsdoc.hbs  jsdoc.json
docs/scripts/: serialize-bigint.js
docs/tools/: MappingModeler.docx  README.md  filter.lua  mappingModeler_userdoc.md
(+2488 files in other folders)
