[tool.poetry]
name = "sls-documentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.3"
sphinxnotes-isso = "^2.0a2"
myst-parser = "^4.0.1"


[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

