[project]
name = "sls-documentation"
version = "0.1.0"
description = "SousLeSens documentation"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinxnotes-isso>=1.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "sphinx-autobuild>=2025.8.25",
]
